<resources>
    <string name="app_name">DairaApp</string>
    <string name="daira_app">Daira App</string>
    <string name="welcome">Welcome!</string>
    <string name="todo">TODO</string>
    <string name="we_re_glad_you_re_here_let_s_get_started">We\'re glad you\'re here, let\'s get started.</string>
    <string name="alone_we_can_do_so_little_together_we_can_do_so_much">Alone we can do so little, together we can do so much!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hakuna_matata">Hakuna Matata!</string>
    <string name="create_an_account">Create an account</string>
    <string name="not_a_member">Not a member?</string>
    <string name="remember_me">Remember me</string>
    <string name="pass_hidden">***********</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="name">Name</string>
    <string name="todoasd">TODO</string>
    <string name="event_description">Event Description</string>
    <string name="save_data">Save Data</string>
    <string name="back">Back</string>
    <string name="textviewasdads">TextView</string>
    <string name="textvieww2">TextView</string>
    <string name="todo343">TODO</string>
    <string name="admin_events">Admin/Events</string>
    <string name="update_event_panel">Update Event Panel</string>
    <string name="update">Update</string>
    <string name="mentors">Mentors</string>
    <string name="mentorr">Mentor</string>
    <string name="string_todoo">TODO</string>
    <string name="assign_mentors_to_events">Assign Mentors to Events</string>
    <string name="click_below_to_select_an_event">Click Below to Select an Event</string>
    <string name="click_below_to_select_a_mentor">Click Below to Select a Mentor</string>
    <string name="assign">Assign</string>
    <string name="mentor_not_assigned">Mentor Not Assigned</string>
    <string name="participants">Participants</string>
    <string name="management_login">Management Login</string>
    <string name="username">username</string>
    <string name="mentor_creation">Mentor Creation</string>
    <string name="oc_creation">OC Creation</string>
    <string name="organizing_committee">Organizing Committee</string>
    <string name="sub_event_name">Sub Event Name</string>
    <string name="sub_event_description">Sub Event Description</string>
    <string name="image_url">Image URL</string>
    <string name="assign_oc_to_sub_events">Assign OC to Sub Events</string>
    <string name="click_below_to_select_an_oc">Click Below to Select an OC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="oc_assignments">OC Assignments</string>
    <string name="view_registeration">View Registeration</string>
    <string name="profilee">Profile</string>
    <string name="profile">Profile</string>
    <string name="assign_event">Assign Event</string>
    <string name="show_mentors">Show Mentors</string>
    <string name="venues">Venues</string>
    <string name="news_will_be_added_here">News will be added here</string>
    <string name="click_below_to_select_sub_event">Click Below to Select Sub Event</string>
    <string name="added_by_oc">Added by OC</string>
    <string name="event_venues"><![CDATA[Event & Venues]]></string>
    <string name="email_email_com">email@email.cpo</string>
    <string name="password">Password</string>
    <string name="assign_location_to_sub_event">Assign Location to Sub-Event</string>
    <string name="assign_location">Assign Location</string>
    <string name="click_below_to_select_location">Click Below to Select Location</string>
    <string name="register_event">Register Event</string>
    <string name="register">Register</string>
    <string name="your_registrations">Your Registrations</string>
    <string name="mentor_message">Mentor Message</string>
    <string name="please_enter_mentor_message_here">Please Enter Mentor Message Here</string>
    <string name="mentor_message_will_appear_here">Mentor Message will appear here.</string>
    <string name="player_and_score">Player and Score</string>
</resources>