<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#19FFC107"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/subeventnameshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewasdads"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subeventdescshow"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/textvieww2" />

        <ImageView
            android:id="@+id/subeventimgshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editsubeventicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo343"
                app:srcCompat="@drawable/edit_icon"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/delsubeventicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/delete_icon"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>