<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FAAF28">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="400dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:text="Update SubEvent Panel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/up_sbev_name"
        android:layout_width="282dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/up_sbev_desc"
        android:layout_width="273dp"
        android:layout_height="97dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/event_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_sbev_name" />

    <EditText
        android:id="@+id/up_sbev_img"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/image_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_sbev_desc" />

    <Button
        android:id="@+id/upsbsubmit"
        android:layout_width="161dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FAAF28"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_sbev_img" />
</androidx.constraintlayout.widget.ConstraintLayout>