<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/splashimg"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcomesplash"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/welcomemsg"
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashimg" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:text="@string/we_re_glad_you_re_here_let_s_get_started"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lottieonboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomemsg"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieonboard"
        android:layout_width="278dp"
        android:layout_height="254dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash" />

</androidx.constraintlayout.widget.ConstraintLayout>